# orbitalis

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.sh  run_pipeline.py  setup.py
.streamlit/: config.toml
orbitalis/: app.py  config.py  earth_texture.py  orbit_file.py  orbit_trails_plot.py
orbitalis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
orbitalis/demo/: conjunction_combined_xyz_vxyz.py  propagator.py
orbitalis/tabs/: tab1_orbit_view.py  tab2_timeline.py  tab3_heatmap.py  tab4_earth_trails.py
orbitalis/utils/: data_loader.py  propagator_utils.py
output/conjunction_events/: high_risk_intervals.csv  low_risk_intervals.csv  negligible_risk_intervals.csv
output/propagated_debris/: 00115U.csv  00119U.csv  00120U.csv  00121U.csv  00122U.csv  00123U.csv  00124U.csv  00125U.csv  00126U.csv  00127U.csv  00128U.csv  00130U.csv  00131U.csv  00132U.csv  00133U.csv  00134U.csv  00136U.csv  00138U.csv  00141U.csv  00144U.csv  00145U.csv  00147U.csv  00148U.csv  00150U.csv  00152U.csv  00154U.csv  00155U.csv  00158U.csv  00159U.csv  00167U.csv  00177U.csv  00178U.csv  00188U.csv  00194U.csv  00195U.csv  00196U.csv  00210U.csv  00223U.csv  00224U.csv  00225U.csv  (+10567 more)
output/propagated_eu_sats/: APRIZESAT_1.csv  APRIZESAT_10.csv  APRIZESAT_2.csv  APRIZESAT_3.csv  APRIZESAT_4.csv  APRIZESAT_5.csv  APRIZESAT_6.csv  APRIZESAT_7.csv  APRIZESAT_8.csv  APRIZESAT_9.csv  AZERSPACE_1.csv  AZERSPACE_2_IS_38.csv  BEESAT_1.csv  BELINTERSAT_1.csv  BIROS.csv  CBERS_4.csv  CBERS_4A.csv  COSMOS_1989_ETALON_1.csv  COSMOS_2024_ETALON_2.csv  COSMOS_2385.csv  (+278 more)
(+2 files in other folders)
